mesa: add INTEL_performance_query support
This re-adds infrastructure to support INTEL_performance_query (with no
backends yet) but in comparison to before:

- There are currently no plans to support the AMD_performance_monitor
  extension with the same infrastructure
- The backend is free to use whatever data structures it likes to
  describe counters now that counter information is only accessed via
  api calls into the backend
- The backend interface is styled after the QueryObject interface
  considering the similarity between the apis

--- a/src/mesa/Makefile.sources
+++ b/src/mesa/Makefile.sources
@@ -138,6 +138,8 @@ MAIN_FILES = \
 	main/pack.h \
 	main/pbo.c \
 	main/pbo.h \
+	main/performance_query.c \
+	main/performance_query.h \
 	main/pipelineobj.c \
 	main/pipelineobj.h \
 	main/pixel.c \
