i965: Implement INTEL_performance_query extension
This adds a bare-bones backend for the INTEL_performance_query extension
that exposes the pipeline statistics on gen 6 and 7 hardware.

Although this could be considered redundant given that the same
statistics are now available via query objects, they are a simple
starting point for this extension and it's expected to be convenient for
tools wanting to have a single go to api to introspect what performance
counters are available, along with names, descriptions and semantic/data
types.

--- a/src/mesa/drivers/dri/i965/Makefile.sources
+++ b/src/mesa/drivers/dri/i965/Makefile.sources
@@ -75,6 +75,7 @@ i965_FILES = \
 	brw_multisample_state.h \
 	brw_object_purgeable.c \
 	brw_packed_float.c \
+	brw_performance_query.c \
 	brw_primitive_restart.c \
 	brw_program.c \
 	brw_program.h \
